<resources>
    <string name="app_name">CodeExam</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string-array name="gender">
            <item>Male</item>
            <item>Female</item>
        </string-array>
</resources>